@@ -13,7 +13,7 @@ class TestEncodedLinks < Test::Unit::TestCase
     assert_equal("http://localhost/form_post?a=b&b=c", page.uri.to_s)
   end
 
-  def test_hpricot_link
+  def test_link_hpricot_style
     page = @agent.click(@page.search('a').first)
     assert_equal("http://localhost/form_post?a=b&b=c", page.uri.to_s)
   end
